[git] Ignore idea files

--- a/fermi.ipynb
+++ b/fermi.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(53 + 53 > 35 ?, array(True, dtype=bool)), (53 == 50 ?, array(False, dtype=bool)), ((68 + 90) > 96 ?, array(True, dtype=bool)), (5 - 76 == 73 ?, array(False, dtype=bool)), (5 == 90 ?, array(False, dtype=bool)), ((23 * 47) == 82 ?, array(False, dtype=bool)), (11 < 39 ?, array(True, dtype=bool)), (42 + 10 < 37 ?, array(False, dtype=bool)), (5 * 2 > 33 ?, array(False, dtype=bool)), (54 > 4 ?, array(True, dtype=bool))]\n"
+     ]
+    }
+   ],
    "source": [
     "from random import choice, random, sample\n",
     "import numpy as np\n",
